nextfare: Handle fare reporting correctly.
seq_go: Archive fare calculation logic to the attic.